--- a/Addblogs/hello.html
+++ b/Addblogs/hello.html
@@ -78,19 +78,19 @@
    
     <div class="name">
         <div>
-    <label  class ="aname" for="aname">Article name</label>
+    <label  class ="aname" id="Articlename" for="aname">Article name</label>
 </div>
 <div>
-    <label  class ="aname" for="aname">Article Description</label>
+    <label  class ="aname" id="ArticleDesciption" for="aname">Article Description</label>
 </div>
 <div>
-    <label  class ="aname" for="aname">Article Category</label>
+    <label  class ="aname" id="ArticleCategory" for="aname">Article Category</label>
 </div>
 <div>
-    <label  class ="aname" for="aname">Article Picture</label>
+    <label  class ="aname"  id="ArticlePicture" for="aname">Article Picture</label>
 </div>
 <div>
-    <label  class ="aname" for="aname">Article Content</label>
+    <label  class ="aname" id="ArticleContent"for="aname">Article Content</label>
 </div>
 
 
@@ -137,7 +137,7 @@
 
     </div>
 <div class="button">
-    <button type="button">Create_Article</button>
+    <button type="button" class="create-btn" id="create-btn" onclick="addArticles()">Create_Article</button>
 
 
 
@@ -147,6 +147,8 @@
 
       
 </div>
+
+<script src="articleadd.js"></script>
 
 </body>
 </html>
