--- a/Modifyblogs/index3.html
+++ b/Modifyblogs/index3.html
@@ -9,7 +9,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
       </style>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style3.css">
     <title>Document</title>
 </head>
 <body>
